--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "polyfill": "^0.1.0",
     "sequelize": "^5.19.1"
   }
 }
